# advent-of-code-2022

./: README.md  execute  pyproject.toml
src/advent_of_code/: __main__.py
src/advent_of_code/day_tasks/: day1.py
src/advent_of_code_2022/: __main__.py
src/advent_of_code_2022/day_tasks/: README.md  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py
