[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "My solutions for Advent of Code 2022. Hello Python!"
keywords = ["advent-of-code-2022", "python"]
authors = ["Damian Cyntler <damian@cyntler.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.4"
iteration-utilities = "^0.11.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
